<resources>
    <string name="app_name">BroadcastReceiverYTelefonia</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="save">Save</string>
    <string name="n_mero_de_telefono">Número de Telefono</string>
    <string name="mensaje">Mensaje</string>
    <string name="guardar">Guardar</string>
    <string name="numero">Número</string>
    <string name="respuesta">Respuesta</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
</resources>